--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Document</title>
+    <title>Document A</title>
 </head>
 <body>
     <nav>
