--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
-
-    <title>Document A</title>
+    
+    <!-- Title & Favicon -->
+    <title>Start Bootstrap</title>
+    <link rel="icon" href="img/favicon_b.png" type="image/x-icon" sizes="16x16" />
 </head>
 <body>
     <nav>
@@ -78,7 +80,7 @@
         </div>
     </div>
     <main>
-        <div class="container-fluid text-uppercase d-flex flex-column align-items-center mb-5">
+        <section class="container-fluid text-uppercase d-flex flex-column align-items-center mb-5">
             <h2 class="mt-5">Portfolio</h2>
             <div class="star-item d-flex align-items-center pb-3 mt-2">
                 <div class="star-line rounded-1 m_width dark"></div>
@@ -125,10 +127,41 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="about">
-            
-        </div>
+        </section>
+        <section class="about">
+            <div class="about_container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2>About</h2>
+                        <div class="star-item d-flex align-items-center pb-3">
+                            <div class="star-line rounded-1 s_width clear"></div>
+
+                            <div class="star px-1">
+                                <i class="fas fa-star"></i>
+                            </div>
+
+                            <div class="star-line rounded-1 s_width clear"></div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <p>
+                            Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
+                        </p>
+                    </div>
+                    <div class="col-12">
+                        <p>
+                            Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!
+                        </p>
+                    </div>
+                    <div class="col-12">
+                        <div class="btn">
+                            <i class="fas fa-download"></i>
+                            <span>Download</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
