--- a/index.html
+++ b/index.html
@@ -129,34 +129,36 @@
             </div>
         </section>
         <section class="about">
-            <div class="about_container">
-                <div class="row">
-                    <div class="col-12">
-                        <h2>About</h2>
-                        <div class="star-item d-flex align-items-center pb-3">
-                            <div class="star-line rounded-1 s_width clear"></div>
-
-                            <div class="star px-1">
-                                <i class="fas fa-star"></i>
+            <div class="about_container pt-5">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12 d-flex flex-column align-items-center">
+                            <h2>About</h2>
+                            <div class="star-item d-flex align-items-center pb-3">
+                                <div class="star-line rounded-1 s_width clear"></div>
+    
+                                <div class="star px-1">
+                                    <i class="fas fa-star"></i>
+                                </div>
+    
+                                <div class="star-line rounded-1 s_width clear"></div>
                             </div>
-
-                            <div class="star-line rounded-1 s_width clear"></div>
                         </div>
-                    </div>
-                    <div class="col-12">
-                        <p>
-                            Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
-                        </p>
-                    </div>
-                    <div class="col-12">
-                        <p>
-                            Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!
-                        </p>
-                    </div>
-                    <div class="col-12">
-                        <div class="btn">
-                            <i class="fas fa-download"></i>
-                            <span>Download</span>
+                        <div class="col-12">
+                            <p>
+                                Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
+                            </p>
+                        </div>
+                        <div class="col-12">
+                            <p>
+                                Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!
+                            </p>
+                        </div>
+                        <div class="col-12 text-center">
+                            <div class="btn mb-5">
+                                <i class="fas fa-download"></i>
+                                <span>Download</span>
+                            </div>
                         </div>
                     </div>
                 </div>
