--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
                                 <div class="star-line rounded-1 s_width clear"></div>
                             </div>
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 col-md-6">
                             <p>
                                 Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.
                             </p>
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 col-md-6">
                             <p>
                                 Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!
                             </p>
