add: "info" style and media query

--- a/index.html
+++ b/index.html
@@ -235,5 +235,65 @@
         </div>
     </form>
     <!-- /Form -->
+
+    <!-- Info -->
+    <div class="info">
+        <div class="container-fluid">
+            <div class="row pt-5">
+                <div class="col-12 col-md-4 d-flex flex-column align-items-center text-center p-3">
+                    <h3>
+                        Location
+                    </h3>
+                    <p>
+                        2215 John Daniel Drive Clark, MO 54243
+                    </p>
+                </div>
+                <div class="col-12 col-md-4 d-flex flex-column align-items-center p-3">
+                    <h3>Around the web</h3>
+                    <div class="social">
+                        <ul class="d-flex">
+                            <li>
+                                <a href="">
+                                    <div class="facebook">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <div class="facebook">
+                                        <i class="fab fa-google-plus-g"></i>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <div class="facebook">
+                                        <i class="fab fa-twitter"></i>
+                                    </div>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <div class="facebook">
+                                        <i class="fab fa-linkedin-in"></i>
+                                    </div>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 d-flex flex-column align-items-center text-center p-3">
+                    <h3>
+                        About Freelancer
+                    </h3>
+                    <p>
+                        Freelance is a free to use, open source Bootstrap theme created by <a href="">Start Bootstrap</a>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /Info -->
 </body>
 </html>
