--- a/index.html
+++ b/index.html
@@ -295,5 +295,14 @@
         </div>
     </div>
     <!-- /Info -->
+
+    <!-- Footer -->
+    <footer class="text-center p-5">
+        <span>
+            Copyright &copy; Your Website 2022
+        </span>
+    </footer>
+    <!-- /Footer -->
+
 </body>
 </html>
