--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
     <div class="jumbotron text-uppercase">
         <div class="container-fluid">
             <div class="col-12">
-                <div class="jumbo-content d-flex flex-column align-items-center">
+                <div class="jumbo-content flex_col_center">
                     <div class="jumbo-img m-3">
                         <img src="img/avatar.svg" alt="">
                     </div>
                     <h1 class="pb-2">
                         Start Bootstrap
                     </h1>
-                    <div class="star-item d-flex align-items-center pb-3">
+                    <div class="star-item flex_row_center pb-3">
                         <div class="star-line rounded-1 m_width clear"></div>
 
                         <div class="star px-1">
@@ -87,9 +87,9 @@
     <!-- Main -->
     <main>
         <!-- Portfolio -->
-        <section class="container-fluid text-uppercase d-flex flex-column align-items-center mb-5">
+        <section class="container-fluid text-uppercase flex_col_center mb-5">
             <h2 class="mt-5">Portfolio</h2>
-            <div class="star-item d-flex align-items-center pb-3 mt-2">
+            <div class="star-item flex_row_center pb-3 mt-2">
                 <div class="star-line rounded-1 m_width dark"></div>
 
                 <div class="star px-1">
@@ -104,31 +104,61 @@
                         <div class="col-12 col-md-6 col-xl-4">
                             <div class="card">
                                 <img src="img/cabin.png" alt="">
+                                <div class="overlay">
+                                    <div class="plus">
+                                        <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-xl-4">
                             <div class="card">
                                 <img src="img/cake.png" alt="">
+                                <div class="overlay">
+                                    <div class="plus">
+                                        <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-xl-4">
                             <div class="card">
                                 <img src="img/circus.png" alt="">
+                                <div class="overlay">
+                                    <div class="plus">
+                                        <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-xl-4">
                             <div class="card">
                                 <img src="img/game.png" alt="">
+                                <div class="overlay">
+                                    <div class="plus">
+                                        <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-xl-4">
                             <div class="card">
                                 <img src="img/safe.png" alt="">
+                                <div class="overlay">
+                                    <div class="plus">
+                                        <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-xl-4">
                             <div class="card">
                                 <img src="img/submarine.png" alt="">
+                                <div class="overlay">
+                                    <div class="plus">
+                                        <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -142,9 +172,9 @@
             <div class="about_container pt-5">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-12 d-flex flex-column align-items-center">
+                        <div class="col-12 flex_col_center">
                             <h2>About</h2>
-                            <div class="star-item d-flex align-items-center pb-3">
+                            <div class="star-item flex_row_center pb-3">
                                 <div class="star-line rounded-1 s_width clear"></div>
     
                                 <div class="star px-1">
@@ -183,11 +213,11 @@
         <div class="form_container">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12 d-flex flex-column align-items-center">
+                    <div class="col-12 flex_col_center">
                         <h2 class="mt-4">
                             Contact me
                         </h2>
-                        <div class="star-item d-flex align-items-center pb-3 mt-2">
+                        <div class="star-item flex_row_center pb-3 mt-2">
                             <div class="star-line rounded-1 dark"></div>
                 
                             <div class="star px-1">
@@ -240,7 +270,7 @@
     <div class="info">
         <div class="container-fluid">
             <div class="row pt-5">
-                <div class="col-12 col-md-4 d-flex flex-column align-items-center text-center p-3">
+                <div class="col-12 col-md-4 flex_col_center text-center p-3">
                     <h3>
                         Location
                     </h3>
@@ -248,7 +278,7 @@
                         2215 John Daniel Drive Clark, MO 54243
                     </p>
                 </div>
-                <div class="col-12 col-md-4 d-flex flex-column align-items-center p-3">
+                <div class="col-12 col-md-4 flex_col_center p-3">
                     <h3>Around the web</h3>
                     <div class="social">
                         <ul class="d-flex">
@@ -283,7 +313,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-12 col-md-4 d-flex flex-column align-items-center text-center p-3">
+                <div class="col-12 col-md-4 flex_col_center text-center p-3">
                     <h3>
                         About Freelancer
                     </h3>
@@ -303,6 +333,5 @@
         </span>
     </footer>
     <!-- /Footer -->
-
 </body>
 </html>
