add: id links on nav

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
                     </a>
                     <ul class="d-flex">
                         <li>
-                            <a class="text-menu" href="">
+                            <a class="text-menu" href="#my-portfolio">
                                 Portfolio
                             </a>
                         </li>
                         <li>
-                            <a class="text-menu" href="">
+                            <a class="text-menu" href="#about-me">
                                 About
                             </a>        
                         </li>
                         <li>
-                            <a class="text-menu" href="">
+                            <a class="text-menu" href="#contact-me">
                                 Contact
                             </a>        
                         </li>
@@ -87,7 +87,7 @@
     <!-- Main -->
     <main>
         <!-- Portfolio -->
-        <section class="container-fluid text-uppercase flex_col_center mb-5">
+        <section id="my-portfolio" class="container-fluid text-uppercase flex_col_center mb-5">
             <h2 class="mt-5">Portfolio</h2>
             <div class="star-item flex_row_center pb-3 mt-2">
                 <div class="star-line rounded-1 m_width dark"></div>
@@ -168,7 +168,7 @@
         <!-- /Portfolio -->
 
         <!-- About -->
-        <section class="about">
+        <section id="about-me" class="about">
             <div class="about_container pt-5">
                 <div class="container-fluid">
                     <div class="row">
@@ -209,7 +209,7 @@
     <!-- /Main -->
 
     <!-- Form -->
-    <form action="">
+    <form id="contact-me" action="">
         <div class="form_container">
             <div class="container-fluid">
                 <div class="row">
