add: "droplist" to burger menu

--- a/index.html
+++ b/index.html
@@ -29,9 +29,45 @@
                     </a>
                 </div>
                 <div class="menu col-3 col-md-6 d-flex justify-content-end">
-                    <a class="burger-menu" href="">
-                        <i class="fas fa-bars border border-1 rounded-3"></i>
-                    </a>
+                        <div class="burger-none">
+                            <div class="burger-container flex_col_end">
+                                <a class="burger-menu" href="">
+                                    <i id="b-menu" class="fas fa-bars border border-1 rounded-3"></i>
+                                </a>
+                                <div class="menu-dropdown flex_col_end">
+                                    <ul>
+                                        <li>
+                                            <a href="#my-portfolio">
+                                                <div class="drop_item">
+                                                    Portfolio
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#about-me">
+                                                <div class="drop_item">
+                                                    About
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#contact-me">
+                                                <div class="drop_item">
+                                                    Contact
+                                                </div>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#my-info">
+                                                <div class="drop_item">
+                                                    Info
+                                                </div>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
                     <ul class="d-flex">
                         <li>
                             <a class="text-menu" href="#my-portfolio">
@@ -267,7 +303,7 @@
     <!-- /Form -->
 
     <!-- Info -->
-    <div class="info">
+    <div id="my-info" class="info">
         <div class="container-fluid">
             <div class="row pt-5">
                 <div class="col-12 col-md-4 flex_col_center text-center p-3">
